--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ code {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     margin: 12px 0;
     padding: 12px;
     gap: 12px;
