--- a/src/components/Options/options.css
+++ b/src/components/Options/options.css
@@ -26,7 +26,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border-radius: var(--radius);
+    border-radius: 32px;
     box-shadow: var(--bs-big);
     border: 1px solid var(--white-bg-color);
     background-color: var(--white-bg-color);
@@ -45,7 +45,7 @@
 .options__item__color {
     width: 100%;
     height: 100%;
-    border-radius: var(--radius);
+    border-radius: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
