--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -78,10 +78,7 @@
 }
 
 .product__characteristics {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-
+    margin: var(--gap);
 }
 
 .product__no-review {
@@ -124,4 +121,85 @@
 
 .product__description {
     white-space: pre-wrap;
+}
+
+
+.product__card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    max-width: 280px;
+    width: 280px;
+    height: var(--product-card-height) !important;
+    flex-shrink: 0;
+    cursor: pointer;
+    transition: var(--normal-speed-all);
+}
+
+
+.product__card__image, .product__card__image > svg, .product__card__image > div > img {
+    position: relative;
+    width: 100%;
+    height: 165px;
+    fill: var(--main-color) !important;
+    object-fit: cover;
+}
+
+.product__card__content {
+    gap: var(--mini-gap);
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 32px);
+    padding: 8px 16px !important;
+}
+
+.product__card__header {
+    justify-content: flex-end !important;
+}
+
+.product__card__description {
+    justify-content: flex-start !important;
+}
+
+
+.product__card__action {
+    position: absolute;
+    bottom: -8px;
+    justify-content: flex-end !important;
+    gap: var(--gap);
+    width: calc(100% - 32px);
+    height: 54px;
+}
+
+.product__card__price {
+    display: inline-flex;
+    justify-content: flex-end;
+}
+
+.product__card__rating {
+    justify-content: center;
+}
+
+.product__card__loader {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 !important;
+}
+
+.product__custom-list {
+    width: var(--catalog-width);
+    height: 230px;
+    overflow: auto;
+}
+
+.product__custom-list__item-name {
+
 }
