--- a/src/components/Options/options.css
+++ b/src/components/Options/options.css
@@ -57,6 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 12px;
 }
 
 .options__item__color__text {
